added fragment and title

--- a/app/src/main/res/layout/activity_add_edit_task.xml
+++ b/app/src/main/res/layout/activity_add_edit_task.xml
@@ -15,6 +15,14 @@
 
     <!-- EditText for getttaskEntrytask description input -->
     <EditText
+        android:id="@+id/editTextTaskTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="start"
+        android:hint="@string/edit_task_title"
+        android:paddingBottom="@dimen/activity_horizontal_margin" />
+
+    <EditText
         android:id="@+id/editTextTaskDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
