--- a/app/src/main/res/layout/task_layout.xml
+++ b/app/src/main/res/layout/task_layout.xml
@@ -18,12 +18,21 @@
 
         <!-- TextView that displays the description -->
         <TextView
-            android:id="@+id/taskDescription"
+            android:id="@+id/taskTitle"
             style="@style/TextAppearance.AppCompat.Medium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="25dp"
             android:textFontWeight="700"
+            android:textColor="@android:color/primary_text_light"
+            tools:text="Title" />
+        <TextView
+            android:id="@+id/taskDescription"
+            style="@style/TextAppearance.AppCompat.Medium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="24dp"
+            android:textFontWeight="400"
             android:textColor="@android:color/primary_text_light"
             tools:text="Description" />
         <LinearLayout
